--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <a href="#about">About Me</a>
     </header>
 
-    <section>
+    <section id="mainImage">
         <div id="mainText">
             <h1>Welcome to My Webpage</h1>
             <p>Scroll Down &#x25BC;</p>
@@ -36,6 +36,7 @@
                     <a href="https://github.com/" target="_blank" id="button">Visit My GitHub</a>
                 </div>
             </div>
+            <div id="divider"></div>
 
             <div id="textSide">
                
@@ -45,6 +46,7 @@
                         functional websites that make an impact.</p>
                 </div>
                
+
                 <div>
                     <h2>My Hobbies</h2>
                     <ul>
