--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 
 <body>
 
-    <!-- Header Section -->
     <header>
         <h3>My WebPage</h3>
         <a href="#about">About Me</a>
@@ -24,7 +23,6 @@
     </section>
 
 
-    <!-- Main Content -->
     <div class="container" id="about">
 
         <div class="innerContainer">
@@ -40,7 +38,7 @@
 
             <div id="textSide">
                
-                <div>
+                <div id="top-text">
                     <h2>About Me</h2>
                     <p>Hello! My name is Muhammad Farasat, and I am a Frontend Developer. I love creating beautiful and
                         functional websites that make an impact.</p>
@@ -63,7 +61,6 @@
 
     </div>
 
-    <!-- Footer Section -->
     <footer>
         <p>&copy; 2025 Muhammad Farasat. All rights reserved.</p>
     </footer>
